# trading_portfolio

./: .gitignore  README.md  pyproject.toml
trading_portfolio/: .env.example  docker-compose.yml  manage.py
trading_portfolio/trading_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
