[project]
name = "p-trading-portofolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg (>=3.2.10,<4.0.0)"
]

[tool.poetry]
packages = [{include = "p_trading_portofolio", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
